--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>CSS Exercises</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
    </head>
    <body>
+      h1 class = "center"> Welcome To The Future IC4 Me </h1>
+    <h2 class="center"> And A little of where  I Came from </h2>
+    
+    <h2 class="center" id="cool-text"> I was raised in South Philadelphia </h2>
+    <p> I developed a love for technology at the age of 5. For me it all just felt so intuitive </p>
+    <p> I was not afforded the opportunity to be able to tinker as much as I wanted to. However, I never
+       allowed this to stop me in my tracks. I  just found other means of doing such. I then fell for math and numbers.
+       Something about 2+2 always equaling 4 was simply magical.
+    </p>
+      
       <!-- Write your HTML in this file! -->
    </body>
 </html>
