--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       h1 class = "center"> Welcome To The Future IC4 Me </h1>
     <h2 class="center"> And A little of where  I Came from </h2>
     
-    <h2 class="center" id="cool-text"> I was raised in South Philadelphia </h2>
+    <h2 class="center" id="list-color"> I was raised in South Philadelphia </h2>
     <p> I developed a love for technology at the age of 5. For me it all just felt so intuitive </p>
     <p> I was not afforded the opportunity to be able to tinker as much as I wanted to. However, I never
        allowed this to stop me in my tracks. I  just found other means of doing such. I then fell for math and numbers.
