change of story

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
        allowed this to stop me in my tracks. I  just found other means of doing such. I then fell for math and numbers.
        Something about 2+2 always equaling 4 was simply magical.
     </p>
-    <p> When 8th grade arrived , all of the children in my grade were excited to go off to a great high school.
-       But for me I hadn't discovered such a place. The School District at the time would provide books detailing the 
-       different schools and such
+    <p> The Universe provided me with the privilegde to attend the High School of Engineering and Science.
+       It was here that I began my career in technology. I took all the available computer science and math classes.
+       I 
    </p>
       
       <!-- Write your HTML in this file! -->
