--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     </p>
     <p> The Universe provided me with the privilegde to attend the High School of Engineering and Science.
        It was here that I began my career in technology. I took all the available computer science and math classes.
-       I 
+       I was also able to take up paid summer internships where I discovered I would not work for free.
+       My living conditions didnt allow for me to be able to donate time for a only a cause.
    </p>
       
       <!-- Write your HTML in this file! -->
