Style.css has been updated with the wanted changes

--- a/index.html
+++ b/index.html
@@ -4,50 +4,45 @@
       <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>CSS Exercises</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="styles.css" rel="stylesheet" type="text/css" >
    </head>
    <body>
       <main>
          
-      <h1 class = "center"> Welcome To The Future IC4 Me </h1>
+      <h1 class = "center" id="mainHeading"> Welcome To The Future IC4 Me </h1>
       <article>  
       <header>
     <h2 class="center" id="list-color"> Early Start </h2>
    </header>
-    <p> I was raised in South Philadelphia. I developed a love for technology at the age of 5. For me it all just felt so intuitive </p>
-    <p> I was not afforded the opportunity to be able to tinker as much as I wanted to. However, I never
-       allowed this to stop me in my tracks. I just found other means of doing such. I then fell for math and numbers.
-       Something about 2+2 always equaling 4 was simply magical.
+    <p class="center" id="list-color"> I was raised in South Philadelphia. I developed a love for technology at the age of 5. For me it all just felt so intuitive </p>
+    <p class="center" id="list-color"> I was not afforded the opportunity to be able to tinker as much as I wanted to. However, I never allowed this to stop me in my tracks. I just found other means of doing such. I then fell for math and numbers. Something about 2+2 always equaling 4 was simply magical.
     </p>
     <img class = "hses" src ="images/buck.jpg"   alt="Tech Background" width="1024" height="768" >
-    &#169; &#174;
+    
    </article>
 <article>
    <h2 class="center" id="list-color"> Middle Ground </h2>
-    <p> The Universe provided me with the privilegde to attend the High School of Engineering and Science.
-       It was here that I began my career in technology. I took all the available computer science and math classes.
-       I was also able to take up paid summer internships. I began to learn the importance of inventory management and repairs.
+    <p class="center" id="list-color"> The Universe provided me with the privilegde to attend the High School of Engineering and Science. It was here that I began my career in technology. I took all the available computer science and math classes.I was also able to take up paid summer internships. I began to learn the importance of inventory management and repairs.
    
    </p>
    <img class = "hses" src ="images/hses.PNG"   alt="High School Photo Background" width="512" height="384">
-   &#169; &#174;
+   
 </article>
 <article>
    <h2 class="center" id="list-color"> Transition Into Adulthood </h2>
-   <p> After graduating high school, I worked as a dish washer where I learned all the important things about sanitation my mother
+   <p class="center" id="list-color"> After graduating high school, I worked as a dish washer where I learned all the important things about sanitation my mother
        wanted to teach me but I couldn't quite grasp yet. I did that for about a year and felt unappreciated. I happened to stumble
        across an opportunity to return to "school". The education was mediocre but the opportunity they promised was obtainable.
        I interned at JP Morgan Chase where I was exposed to Risk Management. I had earned an academic sponsorship but someone lied on me terribly
-       the HR department felt they needed to rescind my offer. One again we kept the ball rolling, same direction. 
-       I think the lady who got in my way was a loser but w.e
+       the HR department felt they needed to rescind my offer. Once again we kept the ball rolling, same direction. I think the lady who got in my way was a loser but w.e
 
    </p> 
-   <img class = "hses" src ="images/jpmc.jpg"   alt="Me at Chase" width="1024" height="768" >
-   &#169; &#174;
+   <img class = "hses" src ="images/jpmc.jpg"   alt="Me at Chase" width="1024" height="768" &#169;>
+   
 </article>
 <article>
    <h2 class="center" id="list-color"> Visions and Aspirations </h2>
-   <p> I successfully graduated from the program. It took time but I was able to break back into tech.
+   <p element class="funparagraph" id="test-p"> I successfully graduated from the program. It took time but I was able to break back into tech.
       I worked as a professional technical support engineer for multiple fortune 500 companies.
       I currently work as a CyberSecurity Technician for an ISP. My goal is to continue growing as Security Engineer.
       I would love to be able to use to the knowledge of a software engineer to reinforce my focus as a Security Professional.
@@ -57,13 +52,13 @@
   </p>
   <br>      
   <img class = "hses" src ="images/mesa.jpg"   alt="Tech Background" width="1024" height="768">
-  &#169; &#174;
+ 
 </article>
 
       <!-- Write your HTML in this file! -->
    </main>
    <footer>
-      <p>Author: Karon Webster<br>
+      <p class="center" id="list-color">Author: Karon Webster 2022 &#169; &#174; <br>
       <a href="https://www.linkedin.com/in/kweb400?trk=people-guest_people_search-card">Click To See Some Work Experience</a></p>
     </footer>
    </body>
